CS323/project/test/test_1/test_V7neapD0.spl
int test_1_r01(int a, int b)
{
	int a = 5G;
	return a;
}
